syntax = "proto3";

package user;

//this is needed for rest mapping 
import "google/api/annotations.proto";


// option go_package = "github.com/kalpesh172000/gategrpc/gen/user";
option go_package = "github.com/kalpesh172000/gategrpc/services/common/gen/user";


service UserService {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse){
    option (google.api.http) = {
      get: "/user/{id}"
    };
  }
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse) {
    option (google.api.http) = {
      post: "/user";
      body: "*"
    };
  }
}


message Profile {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message GetProfileRequest {
  string id = 1;
  string token = 2;
}

message GetProfileResponse {
  Profile profile = 1;
}

message CreateProfileRequest {
  string name = 1 [json_name = "name"];
  string email = 2 [json_name = "email"];
  string password = 3 [json_name = "password"];
}

message CreateProfileResponse {
  string status = 1;
}










